# xlibtrace

./: BUGS  ChangeLog  Makefile.am  Makefile.in  README  TODO  config.h.in  configure  configure.ac
examples/: acroread.log.bz2  xclock.log.bz2  xeyes.log.bz2  xlogo.log.bz2  xterm.log.bz2
src/: Makefile.am  Makefile.in  libxlibtrace-atoms.c.sh  libxlibtrace-atoms.h  libxlibtrace-common.h  libxlibtrace-functions-parameter-overrides  libxlibtrace-functions.h  libxlibtrace-functions.h.sh  libxlibtrace-print-basic.c  libxlibtrace-print-basic.h  libxlibtrace-print-keysyms-gen.h  libxlibtrace-print-keysyms-gen.h.sh  libxlibtrace-print-keysyms.c  libxlibtrace-print-keysyms.h  libxlibtrace-print-x.c  libxlibtrace-print-x.h  libxlibtrace-print.c  libxlibtrace-print.h  libxlibtrace-trace.h  libxlibtrace-varargs.h  libxlibtrace-varargs.h.sh  libxlibtrace.c  xlibtrace.in
